# market-data

./: CLAUDE.md  Cargo.toml  OPTIMIZATIONS.md  README.md  SCHEMA.md  deribit-api.md  docker-compose.yml  loki-config.yml  promtail-config.yml  rust-instruction.md
clickhouse/: init.sql
config/: default.toml
grafana/provisioning/dashboards/: market-data-logs.json
grafana/provisioning/datasources/: clickhouse.yml
scripts/: clean.sh  clickhouse-query.sh  kafka-topics.sh  logs.sh  redis-check.sh  restart.sh  setup.sh  start.sh  status.sh  stop.sh
src/: config.rs  errors.rs  health_check.rs  lib.rs  main.rs
src/exchanges/: deribit.rs  factory.rs  mod.rs
src/exchanges/deribit/: deribit.rs  exchange.rs  mod.rs  models.rs
src/infra/: kafka_consumer.rs  kafka_producer.rs  mod.rs  redis.rs
